--- a/fontbakery/googlefonts-NotoSansSyriac-Black-report.html
+++ b/fontbakery/googlefonts-NotoSansSyriac-Black-report.html
@@ -69,36 +69,28 @@
                 <th>⚠️ WARN</th>
                 <th>⏩ SKIP</th>
                 <th>ℹ️ INFO</th>
-                <th>✔️ PASS</th>
+                <th>✅ PASS</th>
             </tr>
             <tr>
                 <td>1</td>
-                <td>6</td>
-                <td>10</td>
-                <td>118</td>
-                <td>8</td>
-                <td>92</td>
+                <td>5</td>
+                <td>9</td>
+                <td>114</td>
+                <td>7</td>
+                <td>91</td>
             </tr>
             <tr>
                 <td>1%</td>
                 <td>3%</td>
-                <td>6%</td>
-                <td>66%</td>
+                <td>5%</td>
+                <td>67%</td>
                 <td>4%</td>
-                <td>52%</td>
+                <td>53%</td>
             </tr>
             </table>
             
 <p><strong>Note:</strong> The following loglevels were omitted in this report: SKIP, INFO, PASS, DEBUG</p>
-<h2>&lt;Section: Google Fonts&gt; 💥🔥🔥🔥🔥⚠️⚠️⚠️⚠️⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️</h2>
-<h3>Check Google Fonts glyph coverage.</h3>
-<div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/glyph_coverage&gt;</div>
-
-<details><summary>🔥 <strong>fonts/NotoSansSyriac-Black/googlefonts/ttf/NotoSansSyriac-Black.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>Missing required codepoints:</p>
-<pre><code>- 0x00AF (MACRON)
-</code></pre>
-<p>[code: missing-codepoints]</p>
-</span></li></ul></div></details>
+<h2>&lt;Section: Google Fonts&gt; 💥🔥🔥🔥⚠️⚠️⚠️⚠️⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️ℹ️ℹ️ℹ️</h2>
 <h3>Check copyright namerecords match license file.</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/name/license&gt;</div>
 
@@ -163,17 +155,17 @@ FONT_FAMILY_NAME = 'Noto Sans Syriac Black' / SUBFAMILY_NAME = 'Regular'</p>
 <details><summary>⚠️ <strong>fonts/NotoSansSyriac-Black/googlefonts/ttf/NotoSansSyriac-Black.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following glyphs could not be reached by codepoint or substitution rules:</p>
 <pre><code>- dieresiscomb
 
+- dotaccentcomb
+
 - guillemetleft
-
-- ringcomb
-
-- tildecomb
 
 - guillemetright
 
-- dotaccentcomb 
+- macroncomb
 
-- And macroncomb
+- ringcomb 
+
+- And tildecomb
 </code></pre>
 <p>[code: unreachable-glyphs]</p>
 </span></li></ul></div></details>
@@ -196,42 +188,36 @@ FONT_FAMILY_NAME = 'Noto Sans Syriac Black' / SUBFAMILY_NAME = 'Regular'</p>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/dotted_circle&gt;</div>
 
 <details><summary>🔥 <strong>fonts/NotoSansSyriac-Black/googlefonts/ttf/NotoSansSyriac-Black.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The following glyphs could not be attached to the dotted circle glyph:</p>
-<pre><code>- uni0330
+<pre><code>- acutecomb
 
-- uni0653
+- brevecomb
 
-- uni0736
+- caroncomb
 
-- uni0320
+- cedillacomb
 
-- uni0304
+- circumflexcomb
 
-- uni0748
+- commaaccentcomb
 
-- uni030A
+- commaturnedabovecomb
 
-- uni0739
+- gravecomb
 
-- uni064B
+- hungarumlautcomb
 
-- uni0308 
+- ogonekcomb 
 
-- And 42 more.
+- And 52 more.
 </code></pre>
 <p>Use -F or --full-lists to disable shortening of long lists. [code: unattached-dotted-circle-marks]</p>
 </span></li></ul></div></details>
-<h2>&lt;Section: fontbakery.profiles.gdef&gt; ⚠️⚠️</h2>
+<h2>&lt;Section: fontbakery.profiles.gdef&gt; ⚠️</h2>
 <h3>Check glyphs in mark glyph class are non-spacing.</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/gdef_spacing_marks&gt;</div>
 
 <details><summary>⚠️ <strong>fonts/NotoSansSyriac-Black/googlefonts/ttf/NotoSansSyriac-Black.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following spacing glyphs may be in the GDEF mark glyph class by mistake:
 SAM4in (unencoded), SAM4xout (unencoded), SAMdot (unencoded) and SAMline (unencoded) [code: spacing-mark-glyphs]</p>
-</span></li></ul></div></details>
-<h3>Check mark characters are in GDEF mark glyph class.</h3>
-<div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/gdef_mark_chars&gt;</div>
-
-<details><summary>⚠️ <strong>fonts/NotoSansSyriac-Black/googlefonts/ttf/NotoSansSyriac-Black.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following mark characters could be in the GDEF mark glyph class:
-acutecomb (U+0301), brevecomb (U+0306), caroncomb (U+030C), cedillacomb (U+0327), circumflexcomb (U+0302), commaaccentcomb (U+0326), commaturnedabovecomb (U+0312), gravecomb (U+0300), hungarumlautcomb (U+030B) and ogonekcomb (U+0328) [code: mark-chars]</p>
 </span></li></ul></div></details>
 <h2>&lt;Section: Outline Correctness Checks&gt; ⚠️</h2>
 <h3>Do outlines contain any jaggy segments?</h3>
