deploy: c99376f7118a5596194b077e2b4f0ba176ddaf23

--- a/fontbakery/googlefonts-NotoSansSyriacWestern-report.html
+++ b/fontbakery/googlefonts-NotoSansSyriacWestern-report.html
@@ -419,24 +419,24 @@ FONT_FAMILY_NAME = 'Noto Sans Syriac Western' / SUBFAMILY_NAME = 'Regular'</p>
 <h3>Detect any interpolation issues in the font.</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/interpolation_issues&gt;</div>
 
-<details><summary>⚠️ <strong>fonts/NotoSansSyriacWestern/googlefonts/variable-ttf/NotoSansSyriacWestern[wght].ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>Interpolation issues were found in the font: 	- Contour 1 start point differs in glyph 'uni0714' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f55e4fcc910&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f55e43db850&gt;</p>
-<pre><code>- Contour 1 start point differs in glyph 'uni0714.Fina' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f55e4fcc910&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f55e43db850&gt;
+<details><summary>⚠️ <strong>fonts/NotoSansSyriacWestern/googlefonts/variable-ttf/NotoSansSyriacWestern[wght].ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>Interpolation issues were found in the font: 	- Contour 1 start point differs in glyph 'uni0714' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7ff31c6fd310&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7ff31d99f1d0&gt;</p>
+<pre><code>- Contour 1 start point differs in glyph 'uni0714.fina' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7ff31c6fd310&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7ff31d99f1d0&gt;
 
-- Contour 1 start point differs in glyph 'uni0714.Medi' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f55e4fcc910&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f55e43db850&gt;
+- Contour 1 start point differs in glyph 'uni0714.medi' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7ff31c6fd310&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7ff31d99f1d0&gt;
 
-- Contour 1 start point differs in glyph 'uni0714.Init' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f55e4fcc910&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f55e43db850&gt;
+- Contour 1 start point differs in glyph 'uni0714.init' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7ff31c6fd310&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7ff31d99f1d0&gt;
 
-- Contour 2 start point differs in glyph 'uni0724' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f55e4fcc910&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f55e4fcf790&gt;
+- Contour 2 start point differs in glyph 'uni0724' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7ff31c6fd310&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7ff31c6fd510&gt;
 
-- Contour 2 start point differs in glyph 'uni0724.Fina' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f55e4fcc910&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f55e4fcf790&gt;
+- Contour 2 start point differs in glyph 'uni0724.fina' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7ff31c6fd310&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7ff31c6fd510&gt;
 
-- Contour 1 start point differs in glyph 'uni0714.FinaWide' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f55e4fcc910&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f55e43db850&gt;
+- Contour 1 start point differs in glyph 'uni0714.fina.wide' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7ff31c6fd310&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7ff31d99f1d0&gt;
 
-- Contour 1 start point differs in glyph 'uni0714.MediWide' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f55e4fcc910&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f55e43db850&gt;
+- Contour 1 start point differs in glyph 'uni0714.medi.wide' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7ff31c6fd310&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7ff31d99f1d0&gt;
 
-- Contour 1 start point differs in glyph 'uni0714.FinaWide2' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f55e4fcc910&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f55e43db850&gt;
+- Contour 1 start point differs in glyph 'uni0714.fina.wide2' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7ff31c6fd310&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7ff31d99f1d0&gt;
 
-- Contour 1 start point differs in glyph 'uni0714.MediWide2' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f55e4fcc910&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7f55e43db850&gt; 
+- Contour 1 start point differs in glyph 'uni0714.medi.wide2' between location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7ff31c6fd310&gt; and location &lt;fontTools.ttLib.ttGlyphSet._TTGlyphSetGlyf object at 0x7ff31d99f1d0&gt; 
 
 - And 3 more.
 </code></pre>
